// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`outlet > named _content element from current match 1`] = `
<div>
  <div
    data-testid="test-wrapper"
  >
    <div>
      content#Main
    </div>
  </div>
</div>
`;

exports[`outlet > named _content element from next match 1`] = `
<div>
  <div
    data-testid="test-wrapper"
  >
    <div>
      next content#Main
    </div>
  </div>
</div>
`;

exports[`outlet > named _layout element from next match 1`] = `
<div>
  <div
    data-testid="test-wrapper"
  >
    <div>
      next layout#Main
    </div>
  </div>
</div>
`;

exports[`outlet > named _void element from current match 1`] = `
<div>
  <div
    data-testid="test-wrapper"
  >
    <div>
      void#Main
    </div>
  </div>
</div>
`;

exports[`outlet > no match 1`] = `
<div>
  <div
    data-testid="test-wrapper"
  />
</div>
`;
